fix issues  hero image / wrapped in a container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,22 +144,21 @@ p {
             margin-right: 40px;
     }
 }
-    /* hero-image class covers styling on home page and about us page */
-    .hero-image {
-        line-height: 50px;
-    }
-     
-    img {
-        display: flex;
-        width: 100%;
-        height:90vh;
-        background-repeat: no-repeat;
-        background-position: center;
-        object-fit: cover;
-        margin: 30px 0px;
-    }
+    /* hero-image-container, used for styling purposes.  */
+   .hero-image-container {
+    clear: both;
+    width: 100%;
+    height: 500px;
+   }
+   .hero-image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: flex;
+    object-position: center center;
+   }
 
-    /* wedpage title (wrapped in a box with styling, set on hero image) */
+    /* page title (wrapped in a box with styling, set on header hero image & about us page header image) */
     .main-title-box {
         font-size: 100%;
         position: absolute;
@@ -181,15 +180,15 @@ p {
     /* for tablet screen sizes 575px */
       @media screen and (max-width: 575px) {
         .main-title-box {
-            font-size: 50%;
+            font-size: 90%;
             margin-left: 30%;
-            top: 20%;
+            margin-top: 5%;
         } 
     }
 
     /* Text Divider (Used to create brake lines between text or images. Gives a clean and simple style to the page.) 
     The text divider only consist's on home page and about us page.) */
-    #text-divider {
+    .text-divider {
         width: 100%;
         height: 2px;
         margin:30px 0px 30px 0px;
@@ -207,6 +206,7 @@ p {
         max-width: 100%;
     }
     .stories {
+        text-align: center;
         width: 40%;
         float: left;
         margin-left: 30px;
@@ -223,14 +223,13 @@ p {
         text-decoration: none;
         clear: both;
     }
-    /* for moble screen sizes max-width 575px */
+    /* for mobile screen sizes max-width 575px */
     @media screen and (max-width: 575px) {
         .stories {
             display: none;
         }
     }
     
-        
     /* about page*/
 
     /* gives page a title above hero image (who are we) */
@@ -240,6 +239,33 @@ p {
         margin-left: 10%;
         margin-top: 5%;
     }
+    .about-text-wrapper {
+        clear: both;
+        border: solid yellow;
+        height: 400px;
+        width: 1000%;
+        display: flexbox;
+    }
+    .about-text-wrapper, p {
+        width: 100%;
+        height: 80%;
+        text-align: center;
+        
+    }
+
+    /* about-image-container, used for styling purposes */
+    .about-image-container {
+        clear: both;
+        width: 100%;
+        height: 500px;
+    }
+    .about-image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+    }
+
     /* for tablet srceen sizes max-width 750px */
     @media screen and (max-width: 750px) {
     .page-title {
@@ -255,13 +281,13 @@ p {
         h3 {
             font-size: 90%;
         }
+
     }
 
-
-    /* listen page */
+   /* listen page */
 
     /* section for x5 topics containg an image, text and external links to youtube */
-     .section {
+    .section {
         clear: both;
         max-width: 100%;
         display: flex;
@@ -327,55 +353,53 @@ p {
      /* sign up form page */
 
     /* background imqge only used for form (sign up page!) */
-    #background-image {
-        background-image: url('../assets/images/contact\ us\ page.jpg');
+    .background-image {
+        background-image: url('../images/contact\ us\ page.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         height: 100vh;
     }
     label {
-    display: inline-block;
-    clear: left;
-    width: 250px;
-    text-align: right;
-    }
-    #form-container {
-    display: flex;
-    margin: 50px 30px 50px 30px;
-    height: 600px;
-    width: 600px;
-    clear: both;
-    text-align:center;
-    display: flexbox;
-    border: solid yellow;
-    border-radius: 10px; 
-    }
-    .signup-form  h2 {
-        color: #fafafa;
-        margin-bottom: 20px;
-    }
-    /* styling for input boxes (first, last, username and passsword) */
-     input[type=text], input[type=password] {
-        width: 30%;
-        padding: 12px 20px;
-        margin: 8px 0;
         display: inline-block;
-        border: 1px solid #B50273; 
-        border-radius: 8px;
-        box-sizing: border-box;
-      }
-      /* styling for input boxes (emal) */
-     input[type=email] {
-        width: 30%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #B50273;
-        border-radius: 8px;
-        box-sizing: border-box;
-      }
-      
-/* Extra style for the submit button (background-color, border radius (submit)) */ 
+        clear: left;
+        width: 250px;
+        text-align: right;
+        }
+        #form {
+        display: flex;
+        margin: 50px 30px 50px 30px;
+        height: 600px;
+        width: 600px;
+        clear: both;
+        text-align:center;
+        display: flexbox;
+        border: solid yellow;
+        border-radius: 10px; 
+        }
+        .signup-form  h2 {
+            color: #fafafa;
+            margin-bottom: 20px;
+        }
+        /* styling for input boxes (first, last, username and passsword) */
+         input[type=text], input[type=password] {
+            width: 30%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #B50273; 
+            border-radius: 8px;
+            box-sizing: border-box;
+          }
+          /* styling for input boxes (emal) */
+         input[type=email] {
+            width: 30%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #B50273;
+            border-radius: 8px;
+            box-sizing: border-box;
+          }mit button (background-color, border radius (submit)) */ 
 
     #submit-button {
         width: 15%;
